--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nano-socket",
+  "name": "@sw3doo/nano-socke",
   "version": "1.0.0",
   "description": "Ultra-fast WebSocket library built on uWebSockets.js with socket.io-like API",
   "main": "dist/index.js",
